force-app/main/default/objects/Engagement__c/fields/Co_Advisory_Company_3__c.field-meta.xml
<CustomField>
    <fullName>Co_Advisory_Company_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Advisory Company 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Co-Advisory Engagements3</relationshipLabel>
    <relationshipName>EngagementsCoAdvisory3</relationshipName>
    <type>Lookup</type>
</CustomField>