force-app/main/default/objects/Engagement__c/fields/Co_Advisory_Company_4__c.field-meta.xml
<CustomField>
    <fullName>Co_Advisory_Company_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Advisory Company 4</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Co-Advisory Engagements4</relationshipLabel>
    <relationshipName>EngagementsCoAdvisory4</relationshipName>
    <type>Lookup</type>
</CustomField>