force-app/main/default/objects/Engagement__c/fields/Committee_or_Trustee__c.field-meta.xml
<CustomField>
    <fullName>Committee_or_Trustee__c</fullName>
    <label>Committee or Trustee?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>