force-app/main/default/objects/Engagement__c/fields/Companies_Closed_With__c.field-meta.xml
<CustomField>
    <fullName>Companies_Closed_With__c</fullName>
    <description>Legacy Text field, do not use in reporting - 8/15/2016 AYU</description>
    <label>Legacy Companies Closed With</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>