force-app/main/default/objects/Engagement__c/fields/Companies_Closed_With_LK__c.field-meta.xml
<CustomField>
    <fullName>Companies_Closed_With_LK__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to account - use this one in reporting 8/15/2016 AYU</description>
    <label>Companies Closed With</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagements (Companies Closed With)</relationshipLabel>
    <relationshipName>Engagements4</relationshipName>
    <type>Lookup</type>
</CustomField>