force-app/main/default/objects/Engagement__c/fields/Comparables__c.field-meta.xml
<CustomField>
    <fullName>Comparables__c</fullName>
    <label>Comparables</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>