force-app/main/default/objects/Engagement__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>The revenue date, when the engagement became completed with regards to ASC606.</description>
    <inlineHelpText>The revenue date, when the engagement became completed with regards to ASC606.</inlineHelpText>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>