force-app/main/default/objects/Engagement__c/fields/Conclusion_Date__c.field-meta.xml
<CustomField>
    <fullName>Conclusion_Date__c</fullName>
    <label>Conclusion Date</label>
    <type>Date</type>
</CustomField>