force-app/main/default/objects/Engagement__c/fields/Conclusion_Weeks_From_Date_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Conclusion_Weeks_From_Date_Engaged__c</fullName>
    <formula>( Conclusion_Date__c -  Date_Engaged__c ) / 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conclusion - Weeks From Date Engaged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>