force-app/main/default/objects/Engagement__c/fields/Confidentiality_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confidentiality Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>