force-app/main/default/objects/Engagement__c/fields/Conflicts_Check_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_Check_Current_Status__c</fullName>
    <label>Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Request</fullName>
            </value>
            <value>
                <fullName>Returned to Requestor</fullName>
            </value>
            <value>
                <fullName>Under CA Review</fullName>
            </value>
            <value>
                <fullName>Search Completed</fullName>
            </value>
            <value>
                <fullName>Under Legal Review</fullName>
            </value>
            <value>
                <fullName>Under Business Review</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Managed</fullName>
            </value>
            <value>
                <fullName>True Conflict</fullName>
            </value>
            <value>
                <fullName>Returned to Conflicts Admin</fullName>
            </value>
            <value>
                <fullName>Pending Legal Resolution</fullName>
            </value>
            <value>
                <fullName>Pending Business Resolution</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>No Resolution Required</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Auto-Pending</fullName>
            </value>
            <value>
                <fullName>Auto-Postponed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>