force-app/main/default/objects/Engagement__c/fields/Conflicts_Check_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_Check_Request_Date__c</fullName>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>