force-app/main/default/objects/Engagement__c/fields/Conflicts_Check_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_Check_Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Select HL Internal employee</errorMessage>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Houlihan Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagements (Requestor)</relationshipLabel>
    <relationshipName>EngagementsCCRequestor</relationshipName>
    <type>Lookup</type>
</CustomField>