force-app/main/default/objects/Engagement__c/fields/Conflicts_Check_Type__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_Check_Type__c</fullName>
    <label>Conflicts Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Business / Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>