force-app/main/default/objects/Engagement__c/fields/Connected_HL_Transaction_Services_Fees__c.field-meta.xml
<CustomField>
    <fullName>Connected_HL_Transaction_Services_Fees__c</fullName>
    <label>Connected HL Transaction Services/Fees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>