force-app/main/default/objects/Engagement__c/fields/Counterparty_Bids_Available__c.field-meta.xml
<CustomField>
    <fullName>Counterparty_Bids_Available__c</fullName>
    <description>Used to determine if the Edit Bids Button is displayed on the Mass Edit Counterparties</description>
    <formula>RecordType.Name = &apos;Buyside&apos; || RecordType.Name = &apos;Sellside&apos; || RecordType.Name = &apos;Sellside&apos; || RecordType.Name = &apos;Sellside Division&apos; || RecordType.Name = &apos;Illiquid Financial Assets&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Counterparty Bids Available</label>
    <type>Checkbox</type>
</CustomField>