force-app/main/default/objects/Engagement__c/fields/Credit_Against_Success_Fee__c.field-meta.xml
<CustomField>
    <fullName>Credit_Against_Success_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>May not be using this.  Need to check with Brian.</description>
    <label>Credit Against Success Fee?</label>
    <type>Checkbox</type>
</CustomField>