force-app/main/default/objects/Engagement__c/fields/Cumulative_Pending_Accruals__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Pending_Accruals__c</fullName>
    <formula>IF(NOT(ISBLANK(Current_Revenue_Accrual__c)), Current_Revenue_Accrual__r.Cumulative_Pending_Accruals__c, Latest_Revenue_Accrual__r.Cumulative_Pending_Accruals__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cumulative Pending Accruals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>