force-app/main/default/objects/Engagement__c/fields/Cumulative_Total_Reversal__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Total_Reversal__c</fullName>
    <formula>IF(NOT(ISBLANK(Current_Revenue_Accrual__c)), Current_Revenue_Accrual__r.Cumulative_Total_Reversal__c, Latest_Revenue_Accrual__r.Cumulative_Total_Reversal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cumulative Total Reversal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>