force-app/main/default/objects/Engagement__c/fields/Current_Revenue_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Current_Revenue_Accrual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Revenue Accrual</label>
    <referenceTo>Revenue_Accrual__c</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>