force-app/main/default/objects/Engagement__c/fields/Current_Revenue_Projection__c.field-meta.xml
<CustomField>
    <fullName>Current_Revenue_Projection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Month&apos;s Revenue Projection</description>
    <label>Current Revenue Projection</label>
    <referenceTo>Revenue_Projection__c</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>