force-app/main/default/objects/Engagement__c/fields/Date_CA_Expires__c.field-meta.xml
<CustomField>
    <fullName>Date_CA_Expires__c</fullName>
    <label>Date Expires</label>
    <type>Date</type>
</CustomField>