force-app/main/default/objects/Engagement__c/fields/Date_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Email_Sent__c</fullName>
    <label>Date Email Sent</label>
    <type>Date</type>
</CustomField>