force-app/main/default/objects/Engagement__c/fields/Date_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Date_Engaged__c</fullName>
    <description>Changed by AYU 2/28, should be mapped to SLX&apos;s Engagement Letter Received.</description>
    <inlineHelpText>Date on Engagement Letter</inlineHelpText>
    <label>Date Engaged</label>
    <type>Date</type>
</CustomField>