force-app/main/default/objects/Engagement__c/fields/Date_of_Dead_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Dead_Engagement__c</fullName>
    <description>Date stamp when Dead value is selected on Engagements - for Reporting</description>
    <label>Date of Dead Engagement</label>
    <type>Date</type>
</CustomField>