force-app/main/default/objects/Engagement__c/fields/Date_of_OnHold_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Date_of_OnHold_Engagement__c</fullName>
    <description>When engagements are in On Hold stage.  For reporting.</description>
    <label>Date of On Hold Engagements</label>
    <type>Date</type>
</CustomField>