force-app/main/default/objects/Engagement__c/fields/Date_off_Hold__c.field-meta.xml
<CustomField>
    <fullName>Date_off_Hold__c</fullName>
    <label>Date off Hold</label>
    <type>Date</type>
</CustomField>