force-app/main/default/objects/Engagement__c/fields/Date_on_Hold__c.field-meta.xml
<CustomField>
    <fullName>Date_on_Hold__c</fullName>
    <label>Date on Hold</label>
    <type>Date</type>
</CustomField>