force-app/main/default/objects/Engagement__c/fields/Days_in_progress_reports__c.field-meta.xml
<CustomField>
    <fullName>Days_in_progress_reports__c</fullName>
    <description>Reporting purposes</description>
    <formula>NOW()-CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>