force-app/main/default/objects/Engagement__c/fields/Deal_Description__c.field-meta.xml
<CustomField>
    <fullName>Deal_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Description</label>
    <type>Checkbox</type>
</CustomField>