force-app/main/default/objects/Engagement__c/fields/Deal_Profile__c.field-meta.xml
<CustomField>
    <fullName>Deal_Profile__c</fullName>
    <label>Deal Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>