force-app/main/default/objects/Engagement__c/fields/Deal_Profile_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Profile_Date__c</fullName>
    <label>Deal Profile Date</label>
    <type>Date</type>
</CustomField>