force-app/main/default/objects/Engagement__c/fields/Deal_Summary_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Summary_Date__c</fullName>
    <label>Engagement Summary Date</label>
    <type>Date</type>
</CustomField>