force-app/main/default/objects/Engagement__c/fields/DealCloud_URL__c.field-meta.xml
<CustomField>
    <fullName>DealCloud_URL__c</fullName>
    <label>DealCloud URL</label>
    <type>Url</type>
</CustomField>