force-app/main/default/objects/Engagement__c/fields/Debt_Currency__c.field-meta.xml
<CustomField>
    <fullName>Debt_Currency__c</fullName>
    <label>Debt Currency</label>
    <length>40</length>
    <type>Text</type>
</CustomField>