force-app/main/default/objects/Engagement__c/fields/Default_Counterparty_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Counterparty_Record_Type__c</fullName>
    <description>Used to indicate the default record type for the counterparties.  This is primarily used for mapping to the SQL table created</description>
    <formula>/*ENG RT Buyside : EC Buyside*/
IF(AND(RecordType.DeveloperName == &apos;Buyside&apos;, TEXT(Industry_Group__c) &lt;&gt; &apos;FIG - Financial Institutions&apos;),&apos;Buy_Side&apos;,

/*ENG RT Buyside and Industry Grp FIG : EC FIG Buyside*/
IF(AND(RecordType.DeveloperName == &apos;Buyside&apos;, TEXT(Industry_Group__c) == &apos;FIG - Financial Institutions&apos;),&apos;FIG_Buyside&apos;,

/*ENG RT Cap Mkt : EC Cap Mkt*/
IF(RecordType.DeveloperName == &apos;Capital_Markets&apos;,&apos;Capital_Markets&apos;,

/*ENG RT Illiquid : EC IFA*/
IF(RecordType.DeveloperName == &apos;Illiquid_Financial_Assets&apos;,&apos;IFA&apos;,

/*ENG RT Sellside and Industry Grp FIG : EC FIG Sellside*/
IF(AND(RecordType.DeveloperName == &apos;Sellside&apos;,TEXT(Industry_Group__c) == &apos;FIG - Financial Institutions&apos;),&apos;FIG_Sellside&apos;,

/*ENG RT Restructuring and Job Type DM&amp;A Buyside : EC Buyside*/
IF(AND(RecordType.DeveloperName == &apos;Restructuring&apos;,TEXT(Job_Type__c) == &apos;DM&amp;A Buyside&apos;),&apos;Buy_Side&apos;,

/*This should be default record type
-ENG RT Sellside : EC Sellside
-ENG RT Restructuring and Job Type DM&amp;A Sellside: EC Sellside
*/
&apos;Sell_Side&apos;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Counterparty Record Type</label>
    <type>Text</type>
</CustomField>