force-app/main/default/objects/Engagement__c/fields/Disclose_Analyses__c.field-meta.xml
<CustomField>
    <fullName>Disclose_Analyses__c</fullName>
    <label>Disclose Analyses?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>