force-app/main/default/objects/Engagement__c/fields/Disclose_Document__c.field-meta.xml
<CustomField>
    <fullName>Disclose_Document__c</fullName>
    <label>Disclose Document</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1.30E-02</fullName>
            </value>
            <value>
                <fullName>S-4/F-4</fullName>
            </value>
            <value>
                <fullName>State Proxy</fullName>
            </value>
            <value>
                <fullName>14A/14C</fullName>
            </value>
            <value>
                <fullName>14D-9</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>