force-app/main/default/objects/Engagement__c/fields/Disclose_Document_Other__c.field-meta.xml
<CustomField>
    <fullName>Disclose_Document_Other__c</fullName>
    <label>Disclose Document (Other)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>