force-app/main/default/objects/Engagement__c/fields/Discretionary_Fee__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Fee__c</fullName>
    <label>Discretionary Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>