force-app/main/default/objects/Engagement__c/fields/Distressed_Date__c.field-meta.xml
<CustomField>
    <fullName>Distressed_Date__c</fullName>
    <label>Distressed Date</label>
    <type>Date</type>
</CustomField>