force-app/main/default/objects/Engagement__c/fields/DND_Status__c.field-meta.xml
<CustomField>
    <fullName>DND_Status__c</fullName>
    <label>DND Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>