force-app/main/default/objects/Engagement__c/fields/Do_Not_Notify_Reversal__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Notify_Reversal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Notify Reversal</label>
    <type>Checkbox</type>
</CustomField>