force-app/main/default/objects/Engagement__c/fields/Does_Client_have_a_VAT_number__c.field-meta.xml
<CustomField>
    <fullName>Does_Client_have_a_VAT_number__c</fullName>
    <label>Does Client have a VAT number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>