force-app/main/default/objects/Engagement__c/fields/Earn_Out_Fee__c.field-meta.xml
<CustomField>
    <fullName>Earn_Out_Fee__c</fullName>
    <label>Earn Out Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>