force-app/main/default/objects/Engagement__c/fields/Earnout_Date__c.field-meta.xml
<CustomField>
    <fullName>Earnout_Date__c</fullName>
    <label>Earnout Date</label>
    <type>Date</type>
</CustomField>