force-app/main/default/objects/Engagement__c/fields/Eng_Name_Store__c.field-meta.xml
<CustomField>
    <fullName>Eng_Name_Store__c</fullName>
    <description>Used to store the original engagement name for DND</description>
    <label>Eng Name Store</label>
    <length>80</length>
    <type>Text</type>
</CustomField>