force-app/main/default/objects/Engagement__c/fields/Engagement_Allocation_Insertfield__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Allocation_Insertfield__c</fullName>
    <label>Engagement Allocation Insertfield</label>
    <length>25</length>
    <type>Text</type>
</CustomField>