force-app/main/default/objects/Engagement__c/fields/Engagement_AR_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Engagement_AR_Receipt__c</fullName>
    <formula>HYPERLINK(&quot;/00O5A000008Gpoi?pv0=&quot;&amp;Full_Engagement_ID__c, &quot;Engagement AR Receipt&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement AR Receipt</label>
    <type>Text</type>
</CustomField>