force-app/main/default/objects/Engagement__c/fields/Engagement_Comment__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Comment__c</fullName>
    <label>Engagement Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>