force-app/main/default/objects/Engagement__c/fields/Engagement_Comment_Latest__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Comment_Latest__c</fullName>
    <description>Used by Pipeline Manager to hold the last comment made in the Engagement Comments list.  This field is for display only in the Pipeline Manager and won&apos;t be included in any of the object layouts.  It will be auto-populated by a trigger at the time a comment is created.</description>
    <label>Last Engagement Comment HOLDER</label>
    <length>3850</length>
    <type>LongTextArea</type>
</CustomField>