force-app/main/default/objects/Engagement__c/fields/Engagement_Contact_Seller_No_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Contact_Seller_No_Attorney__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please &quot;check&quot; if a Seller Attorney was not required for this Engagement</inlineHelpText>
    <label>Engagement Contact Seller No Attorney</label>
    <type>Checkbox</type>
</CustomField>