force-app/main/default/objects/Engagement__c/fields/Engagement_Contacts_Buyer_Attorneys__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Contacts_Buyer_Attorneys__c</fullName>
    <inlineHelpText>Roll-up to count if required Engagement Contacts of Role &quot;Attorney&quot; have been entered for Buyer</inlineHelpText>
    <label>Engagement Contacts Buyer Attorneys</label>
    <summaryFilterItems>
        <field>Engagement_External_Team__c.Role__c</field>
        <operation>equals</operation>
        <value>Attorney, Attorney (Acquirer)</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Engagement_External_Team__c.Party__c</field>
        <operation>equals</operation>
        <value>Buyer</value>
    </summaryFilterItems>
    <summaryForeignKey>Engagement_External_Team__c.Engagement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>