force-app/main/default/objects/Engagement__c/fields/Engagement_Contacts_Buyer_Check__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Contacts_Buyer_Check__c</fullName>
    <formula>IF( AND(OR(Engagement_Contacts_Buyer_Attorneys__c &gt; 0,Engagement_Contact_Buyer_No_Attorney__c = true), Engagement_Contacts_Buyer_Company__c &gt; 0), True, False)</formula>
    <inlineHelpText>Indicates if required Engagement Contacts for Buyer are present (an Attorney contact along with Company Contact and/or Board of Directors contacts are required)</inlineHelpText>
    <label>Engagement Contacts Buyer Check</label>
    <type>Checkbox</type>
</CustomField>