force-app/main/default/objects/Engagement__c/fields/Engagement_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Expenses__c</fullName>
    <formula>HYPERLINK(&quot;/00O5A000008Gv6h?pv0=&quot;&amp;Full_Engagement_ID__c, &quot;Engagement Expenses&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Expenses</label>
    <type>Text</type>
</CustomField>