force-app/main/default/objects/Engagement__c/fields/Engagement_Financials_Check__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Financials_Check__c</fullName>
    <formula>IF(NOT(CONTAINS(TEXT(Industry_Group__c),&apos;FIG&apos;)),
 
  IF( AND(
          Engagement_Financials_First_Present__c = 1, 
          Engagement_Financials_Final_Present__c = 1, 
          Engagement_Financials_Closing_Present__c = 1
      ),
      True, False),
   
  IF(CONTAINS(TEXT(Industry_Group__c),&apos;FIG&apos;),
      
       IF( AND(
           Engagement_Financials_FIG_Closing__c = 1, 
          Engagement_Financials_FIG_First__c = 1, 
          Engagement_Financials_FIG_Final__c = 1
      ),
      True, False),

     False
     
  )

)</formula>
    <inlineHelpText>Indicates if required Engagement Financials are present (First, Final, &amp; Closing with Revenue LTM (MM) and EBITDA LTM (MM). For FIG, First, Final, &amp; Closing with Book Value (Current), Total Assets, Net Income (LTM), or EBITDA (LTM))</inlineHelpText>
    <label>Engagement Financials Check</label>
    <type>Checkbox</type>
</CustomField>